@@ -1,5 +1,8 @@
 2014-03-27  Benno Schulenberg  <bensberg@justemail.net>
 	* src/nano.c (main) - Fix compilation with --disable-utf8.
+	* src/global.c (shortcut_init) - Place a help string among
+	its kin, adjust some indentation, group function pairs more
+	tightly, bundle restricted stuff, and delete an unused item.
 
 2014-03-27  Mike Frysinger  <vapier@gentoo.org>.
 	* configure.ac - Make --disable-nanorc with --enable-color barf.
